@@ -212,6 +212,8 @@ Version 1.13.0-dev:
    * Made the error messages sent to stderr when the core data dir is
      incorrectly set more helpful.
    * Fix bug #20126: Recursive preprocessor includes cause infinite loop
+   * Added 'faction_lock' and 'leader_lock' to SideWML to be used in MP Connect
+     screen. Fixes bug #21978.
 
 Version 1.11.11:
  * Add-ons server:
